Configure surefire plugin to use --enable-preview